--- a/fashion-management-design.html
+++ b/fashion-management-design.html
@@ -564,13 +564,13 @@
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-20-fund gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js study-head2">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js study-head2 heading3div">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top"
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css2">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css2 title5">
                                                             Fashion Marketing<br>
                                                             & Management Design
                                                         </h3>
@@ -582,7 +582,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container">
                                                         <div
-                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-manage">
+                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-manage line5">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -596,7 +596,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
-                                                    <div class="gdlr-core-text-box-item-content prg-width p-color">
+                                                    <div class="gdlr-core-text-box-item-content prg-width p-color pdiv1">
                                                         <p>Fashion Marketing
                                                             & Management Design is an exciting field that opens one up to countless
                                                             opportunities in the fashion industry.
@@ -632,7 +632,7 @@
                                         <div class="gdlr-core-block-item-title-wrap  gdlr-core-left-align gdlr-core-item-mglr"
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
-                                                <h3 class="gdlr-core-block-item-title titlestyle">
+                                                <h3 class="gdlr-core-block-item-title titlestyle title5">
                                                     MODULES</h3>
                                                 <div class="gdlr-core-block-item-title-divider">
                                                 </div>
@@ -640,15 +640,15 @@
                                         </div>
                                         <div class="gdlr-core-event-item-holder clearfix">
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/fashion-manage/theory.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5"><a
                                                             href="#">Theory</a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css text4">
                                                         • Fibers & Textiles<br>
                                                         • History of Costumes<br>
                                                         • 20th Century styles & Trends<br>
@@ -663,15 +663,15 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows-left gdlr-core-column-first  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/fashion-manage/marketing.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5"><a
                                                             href="#">Marketing</a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css text4">
                                                         • Color Theory<br>
                                                         • Technical Drawings<br>
                                                         • Garmin Typology<br>
@@ -686,15 +686,15 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows gdlr-core-column-3-row-left  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-3-rows gdlr-core-column-3-row-left  clearfix width1">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/fashion-manage/management.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
+                                                    <h3 class="gdlr-core-event-item-title titles-css title5"><a
                                                             href="#">Management</a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css text4">
                                                         • Fashion Design Principles<br>
                                                         • Product Development<br>
                                                         • Industrial Attachment<br>
@@ -720,7 +720,7 @@
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element">
                                                     <h3
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css-splitter mrg-top">
+                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-splitter mrg-top visualp">
                                                         Career opportunities available after completing<br>
                                                         the Fashion Marketing &<br>
                                                         Management Design Advanced Diploma
@@ -792,7 +792,7 @@
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
-                            <h2>GET IN TOUCH WITH US NOW<br>
+                            <h2 class="text3">GET IN TOUCH WITH US NOW<br>
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
