--- a/contact.html
+++ b/contact.html
@@ -488,6 +488,14 @@
                                                                     </p>
                                                                 </div>
                                                                 <div class="quform-element">
+                                                                    <p class="labels">Phone (required)
+                                                                        <br>
+                                                                        <span class="wpcf7-form-control-wrap your-email">
+                                                                            <input id="email" type="text" name="email" size="40" class="input1" aria-required="true" aria-invalid="false" required>
+                                                                        </span> 
+                                                                    </p>
+                                                                </div>
+                                                                <div class="quform-element">
                                                                     <p class="labels">Message
                                                                         <br>
                                                                         <span class="wpcf7-form-control-wrap your-message">
