--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                                         data-saveperformance="off" data-title="Slide" data-param1=""
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/1-01.webp"
+                                                        data-param10="" data-description=""> <img src="img/13-02.png"
                                                             alt="" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
@@ -633,37 +633,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-wrapper " style="padding: 0px 0px 0px 0px;">
-                        <div class="gdlr-core-pbf-background-wrap">
-                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-size: cover ;background-position: center ;" data-parallax-speed="0.8">
-                            </div>
-                        </div>
+                    <div class="gdlr-core-pbf-wrapper " id="div_983a_29">
+                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_302"></div>
+                        <div class="overlay"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first"
-                                    style="width: 38%;">
-                                    <div class=" gdlr-core-js img1" style="min-height: 575px ;"
-                                        data-sync-height="height-half">
-                                        <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
-                                            <img src="img/posts (1).jpg" style="width: 100%;" alt="">
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
+                                            <div class="gdlr-core-pbf-element">
+                                                <img src="img/posts (1).jpg" alt="" style="width: 80%;" class="vision-img aos-init aos-animate width1 scale1" data-aos="fade-right" data-aos-duration="800">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30" style="width: 62%;">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js pad1"
-                                        style="padding: 80px 120px 55px 90px;" data-sync-height="height-half"
-                                        data-sync-height-center>
-                                        <div class="gdlr-core-pbf-background-wrap height2">
-                                            <div class="gdlr-core-pbf-background2 gdlr-core-parallax gdlr-core-js height2"
-                                                style="background-image: url(img/B34A0461.jpg) ;background-size: cover ;background-position: center ;"
-                                                data-parallax-speed="0.1">
-                                                <div class="overlay"></div>
-                                            </div>
-                                        </div>
-                                        <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-10">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values2">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr"
                                                     style="padding-bottom: 10px ;">
@@ -694,7 +680,7 @@
                                                 <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align "
                                                     style="padding-bottom: 0px ;"><a
                                                         class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border button1"
-                                                        href="admission.html" data-aos="fade-left"
+                                                        href="course-admission.html" data-aos="fade-left"
                                                         data-aos-duration="500" data-aos-delay="200"
                                                         style="font-size: 15px ;color: #ffffff ;padding: 5px 20px 5px 20px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
                                                             class="gdlr-core-content text2">Apply Now</span></a></div>
