--- a/fashion-design.html
+++ b/fashion-design.html
@@ -320,7 +320,7 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title title1 h3-css visualp">
                                                         Career opportunities available after completing<br>
-                                                        the Fashion Design Advanced Diploma
+                                                        the Fashion Design Advanced Diploma and Bachelors
                                                     </h3>
                                                 </div>
                                             </div>
@@ -331,29 +331,29 @@
                                     <div class="grid-container disp">
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 1">
-                                            <p  class="title6">Fashion Photography
+                                            <p  class="text8">Fashion Photography
                                                 Coordinator </p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p class="mrg-top-grid title6 mrg10">Costume Coordinator<br>
+                                            <p class="mrg-top-grid text8 mrg10">Costume Coordinator<br>
                                                 (for Television, Film or Theatre)</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p  class="title6">Fashion Consultant</p>
+                                            <p  class="text8">Fashion Consultant</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p  class="title6">Fashion Forecaster </p>
+                                            <p  class="text8">Fashion Forecaster </p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p  class="title6">Fashion Illustrator </p>
+                                            <p  class="text8">Fashion Illustrator </p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p  class="title6">Costume Designer</p>
+                                            <p  class="text8">Costume Designer</p>
                                         </div>
                                     </div>
 
