--- a/fashion-management-design.html
+++ b/fashion-management-design.html
@@ -519,7 +519,7 @@
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-splitter mrg-top visualp">
                                                         Career opportunities available after completing<br>
                                                         the Fashion Marketing &<br>
-                                                        Management Design Advanced Diploma
+                                                        Management Design Advanced Diploma and Bachelors
                                                     </h3>
                                                 </div>
                                             </div>
@@ -527,54 +527,54 @@
                                     </div>
 
 
-                                    <div class="grid-container2">
+                                    <div class="grid-container2 mrg12">
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 1">
-                                            <p>Fashion Buyer</p>
+                                            <p class="text8">Fashion Buyer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p>Costume Coordinator</p>
+                                            <p  class="text8">Costume Coordinator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p>Fashion Editor</p>
+                                            <p  class="text8">Fashion Editor</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p>Fashion Coordinator</p>
+                                            <p  class="text8">Fashion Coordinator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p>Brand Manager</p>
+                                            <p  class="text8">Brand Manager</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Market Researcher</p>
+                                            <p  class="text8">Market Researcher</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 7">
-                                            <p>Visual Merchandiser</p>
+                                            <p  class="text8">Visual Merchandiser</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 8">
-                                            <p>Public Relations Officer</p>
+                                            <p  class="text8">Public Relations Officer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 9">
-                                            <p>Image Coordinator</p>
+                                            <p  class="text8">Image Coordinator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 10">
-                                            <p>Image Consultant</p>
+                                            <p  class="text8">Image Consultant</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 11">
-                                            <p>Event Manager</p>
+                                            <p  class="text8">Event Manager</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 12">
-                                            <p>Merchandiser</p>
+                                            <p  class="text8">Merchandiser</p>
                                         </div>
                                     </div>
 
@@ -584,7 +584,7 @@
                     </div>
                 </div>
             </div>
-            <section class="subscription-block">
+            <section class="subscription-block mrg9">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
