--- a/index.html
+++ b/index.html
@@ -642,12 +642,12 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/posts (1).jpg" alt="" style="width: 80%;" class="vision-img aos-init aos-animate width1 scale1" data-aos="fade-right" data-aos-duration="800">
+                                                <img src="img/course.webp" alt="" style="width: 80%;" class="vision-img aos-init aos-animate width1 scale1" data-aos="fade-right" data-aos-duration="800">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-10">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-10 width1" style="width: 60%;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values2">
                                             <div class="gdlr-core-pbf-element">
@@ -657,7 +657,7 @@
                                                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title1"
                                                             data-aos="fade-left" data-aos-duration="500"
                                                             style="font-size: 29px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: black ;">
-                                                            ENROLL NOW!</h3>
+                                                            Our sewing basics workshop are available now!</h3>
                                                     </div>
                                                     <!-- <span
                                                         class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption txtmob1"
@@ -669,10 +669,16 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-text-box-item-content "
-                                                        style="font-size: 22px ;text-transform: none ;color: black ;">
+                                                        style="font-size: 22px ;text-transform: none ;color: black ;font-weight: 300;">
                                                         <p class="text1" data-aos="fade-left" data-aos-duration="500"
-                                                            data-aos-delay="100">Registration is open for the new
-                                                            academic year</p>
+                                                            data-aos-delay="100">
+                                                            <span style="font-weight: 500;">We are pleased to join us to learn together:</span> <br>
+                                                            • The ways of using the sewing machine <br>
+                                                            • The importance of the shuttle in the sewing process <br>
+                                                            • The importance of tension <br>
+                                                            • How to sew straight, curved lines and sharp angles <br>
+                                                            • Sample sewing of a square and another round dome <br>
+                                                            • Sewing sample for front pockets, sample for zippers                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
