--- a/interior-design.html
+++ b/interior-design.html
@@ -525,53 +525,53 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css visualp">
                                                         Career opportunities available after<br>
-                                                        completing the Interior Design Advanced Diploma
+                                                        completing the Interior Design Advanced Diploma and Bachelors
                                                     </h3>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     
-                                    <div class="grid-container-intr">
+                                    <div class="grid-container-intr mrg12">
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 1">
-                                            <p>Commercial Interior Designer</p>
+                                            <p class="text8">Commercial Interior Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p>Manager Designer</p>
+                                            <p  class="text8">Manager Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p>Residential Interior Designer</p>
+                                            <p  class="text8">Residential Interior Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p>Exhibition Designer</p>
+                                            <p  class="text8">Exhibition Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p>Institutional Interior Designer</p>
+                                            <p  class="text8">Institutional Interior Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>CAD Designer</p>
+                                            <p  class="text8">CAD Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Furniture Designer</p>
+                                            <p  class="text8">Furniture Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Educator</p>
+                                            <p  class="text8">Educator</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Design Consultant</p>
+                                            <p  class="text8">Design Consultant</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Lighting Facility Designer</p>
+                                            <p  class="text8">Lighting Facility Designer</p>
                                         </div>
                                     </div>
 
@@ -581,7 +581,7 @@
                     </div>
                 </div>
             </div>
-            <section class="subscription-block">
+            <section class="subscription-block mrg9">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
