--- a/jewelery-design.html
+++ b/jewelery-design.html
@@ -523,7 +523,7 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title title1 h3-css visualp">
                                                         Career opportunities available after completing<br>
-                                                        the Jewelry Design Advanced Diploma
+                                                        the Jewelry Design Advanced Diploma and Bachelors
                                                     </h3>
                                                 </div>
                                             </div>
@@ -534,39 +534,39 @@
                                     <div class="grid-container-3rows disp">
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 1">
-                                            <p>Jewelry Craftsperson</p>
+                                            <p class="text8">Jewelry Craftsperson</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p>Jewelry Retailer</p>
+                                            <p  class="text8">Jewelry Retailer</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p>Sign maker</p>
+                                            <p  class="text8">Sign maker</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p>Jewelry Designer/Artist</p>
+                                            <p  class="text8">Jewelry Designer/Artist</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p>Engraver</p>
+                                            <p  class="text8">Engraver</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 7">
-                                            <p>Lapidary</p>
+                                            <p  class="text8">Lapidary</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 8">
-                                            <p>Fashion Jeweler</p>
+                                            <p  class="text8">Fashion Jeweler</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 9">
-                                            <p>Gemmologist</p>
+                                            <p  class="text8">Gemmologist</p>
                                         </div>
                                         <div class="grid-item-3rows item-rows">
                                             <img src="img/Bullets-01.png" alt="Icon 10">
-                                            <p>Jewelry Repair Expert</p>
+                                            <p  class="text8">Jewelry Repair Expert</p>
                                         </div>
                                     </div>
 
