--- a/visual-communication.html
+++ b/visual-communication.html
@@ -543,30 +543,30 @@
                                                 </div>
                                             </div>
 
-                                            <div class="grid-container-intr">
+                                            <div class="grid-container-intr mrg12">
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 1">
-                                                    <p>Creative Director</p>
+                                                    <p class="text8">Creative Director</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 2">
-                                                    <p>Illustrator</p>
+                                                    <p  class="text8">Illustrator</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 3">
-                                                    <p>Editorial Designer</p>
+                                                    <p  class="text8">Editorial Designer</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 4">
-                                                    <p>Advertising Art Director</p>
+                                                    <p  class="text8">Advertising Art Director</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 5">
-                                                    <p>Packaging Designer</p>
+                                                    <p  class="text8">Packaging Designer</p>
                                                 </div>
                                                 <div class="grid-item">
                                                     <img src="img/Bullets-01.png" alt="Icon 6">
-                                                    <p>Corporate Identity Designer</p>
+                                                    <p  class="text8">Corporate Identity Designer</p>
                                                 </div>
                                             </div>
 
@@ -576,7 +576,7 @@
                             </div>
                         </div>
                     </div>
-                    <section class="subscription-block">
+                    <section class="subscription-block mrg9">
                         <div>
                             <div class="subscribe-box">
                                 <div class="inner wow fadeIn">
